--- a/7-module/4-task/index.html
+++ b/7-module/4-task/index.html
@@ -18,7 +18,7 @@
     import StepSlider from './index.js';
 
     let stepSlider = new StepSlider({
-      steps: 5
+      steps: 5, value :2
     });
 
     holder.append(stepSlider.elem);
